--- a/GymCoachClean/src/i18n/locales/sv.json
+++ b/GymCoachClean/src/i18n/locales/sv.json
@@ -4,8 +4,46 @@
     "cancel": "Avbryt",
     "back": "Tillbaka",
     "save": "Spara",
+    "error": "Fel",
+    "delete": "Ta bort",
     "loading": "Laddar...",
-    "saving": "Sparar..."
+    "saving": "Sparar...",
+    "errors": {
+      "failed_to_start_quick_workout": "Misslyckades med att starta snabbt träningspass. Försök igen.",
+      "failed_to_delete_workout_plan": "Misslyckades med att ta bort träningsplan",
+      "failed_to_load_session_data": "Misslyckades med att ladda sessionsdata",
+      "failed_to_start_workout_session": "Misslyckades med att starta träningspass",
+      "no_active_session_to_complete": "Ingen aktiv session att slutföra",
+      "failed_to_complete_session": "Misslyckades med att slutföra session",
+      "failed_to_load_conversation": "Misslyckades med att ladda konversation",
+      "title_too_long": "Titel för lång (max 100 tecken)",
+      "failed_to_update_conversation_title": "Misslyckades med att uppdatera konversationstitel",
+      "failed_to_delete_conversation": "Misslyckades med att ta bort konversation",
+      "failed_to_update_profile": "Misslyckades med att uppdatera profil",
+      "failed_to_save_fitness_goal": "Misslyckades med att spara träningsmål. Försök igen.",
+      "failed_to_remove_fitness_goal": "Misslyckades med att ta bort träningsmål. Försök igen.",
+      "failed_to_save_daily_goals": "Misslyckades med att spara dagliga mål. Försök igen.",
+      "failed_to_save_ai_preferences": "Misslyckades med att spara AI-inställningar. Försök igen.",
+      "failed_to_update_notification_settings": "Misslyckades med att uppdatera aviseringsinställningar",
+      "failed_to_upload_profile_image": "Misslyckades med att ladda upp profilbild. Försök igen.",
+      "please_enter_plan_name": "Ange ett plannamn",
+      "please_enter_exercise_name": "Ange ett övningsnamn",
+      "please_enter_meal_name": "Ange ett måltidsnamn",
+      "please_enter_calories": "Ange kalorier",
+      "failed_to_save_custom_meal": "Misslyckades med att spara anpassad måltid. Försök igen.",
+      "failed_to_delete_meal": "Misslyckades med att ta bort måltid. Försök igen.",
+      "failed_to_update_water_intake": "Misslyckades med att uppdatera vattenintag",
+      "failed_to_load_meal_data": "Misslyckades med att ladda måltidsdata.",
+      "failed_to_search_foods": "Misslyckades med att söka efter mat. Försök igen.",
+      "failed_to_load_progress_photos": "Misslyckades med att ladda framstegsfoton",
+      "failed_to_upload_photo": "Misslyckades med att ladda upp foto. Försök igen.",
+      "failed_to_delete_photo": "Misslyckades med att ta bort foto",
+      "failed_to_update_photo": "Misslyckades med att uppdatera foto",
+      "failed_to_pick_image": "Misslyckades med att välja bild. Försök igen.",
+      "failed_to_upload_image": "Misslyckades med att ladda upp bild. Försök igen.",
+      "workout_not_found": "Träningspass hittades inte",
+      "failed_to_load_workout_details": "Misslyckades med att ladda träningspassdetaljer"
+    }
   },
   "nutrition": {
     "title": "Näring",
@@ -48,6 +86,8 @@
     "success": "Framgång",
     "meal_updated": "Måltid uppdaterad framgångsrikt!",
     "meal_added": "Måltid tillagd framgångsrikt!",
+    "delete_meal_title": "Ta bort måltid",
+    "delete_meal_message": "Är du säker på att du vill ta bort den här måltiden?",
     "coming_soon": "Kommer snart...",
     "water_intake": "Vattenintag",
     "glasses_today": "glas idag",
@@ -59,13 +99,35 @@
       "failed_to_add": "Misslyckades med att lägga till måltid. Försök igen."
     }
   },
+  "notifications": {
+    "hydration_goal_title": "💧 Hydreringsmål uppnått!",
+    "hydration_goal_message": "Bra jobbat! Du har nått ditt dagliga vattenintagsmål.",
+    "nutrition_reminders_title": "Måltidspåminnelser",
+    "nutrition_reminders_message": "Vill du ta emot påminnelser om att logga dina måltider?",
+    "reminders_enabled": "Måltidspåminnelser har aktiverats!"
+  },
   "analytics": {
+    "title": "Analys",
+    "overview": "Översikt",
+    "progress": "Framsteg",
+    "statistics": "Statistik",
+    "body_measurements": "Kroppsmått",
+    "weight_tracking": "Viktspårning",
+    "strength_progress": "Styrkeutveckling",
+    "cardio_progress": "Kondisutveckling",
+    "nutrition_trends": "Näringstrender",
+    "workout_frequency": "Träningsfrekvens",
+    "personal_records": "Personliga rekord",
+    "achievements": "Prestationer",
+    "goals": "Mål",
+    "this_week": "Denna vecka",
+    "this_month": "Denna månad",
+    "this_year": "Detta år",
+    "all_time": "All tid",
     "total_workouts": "Totalt antal träningspass",
     "current_streak": "Aktuell rad",
-    "this_week": "Denna vecka",
     "hours_trained": "Timmar tränade",
     "avg_duration": "Genomsnittlig tid (min)",
-    "personal_records": "Personliga rekord",
     "recent_strength_progress": "Senaste styrkeframgång",
     "weight": "Vikt",
     "body_fat": "Kroppsfett",
@@ -88,7 +150,18 @@
     "welcome_question": "Vad skulle du vilja veta?",
     "thinking": "AI Tränare tänker...",
     "ask_anything": "Fråga din AI tränare vad som helst...",
-    "enter_conversation_title": "Ange konversationstitel..."
+    "enter_conversation_title": "Ange konversationstitel...",
+    "chat": "Chatt",
+    "generate_workout": "Generera träningspass",
+    "generate_meal_plan": "Generera måltidsplan",
+    "get_advice": "Få råd",
+    "new_conversation": "Ny konversation",
+    "delete_conversation": "Ta bort konversation",
+    "rename_conversation": "Byt namn på konversation",
+    "clear_history": "Rensa historik",
+    "rate_limit": "Begränsning",
+    "requests_remaining": "Förfrågningar kvar",
+    "upgrade_plan": "Uppgradera plan"
   },
   "delete": "Ta bort",
   "edit": "Redigera",
@@ -180,25 +253,7 @@
     "in_progress": "Pågående",
     "scheduled": "Schemalagd"
   },
-  "analytics": {
-    "title": "Analys",
-    "overview": "Översikt",
-    "progress": "Framsteg",
-    "statistics": "Statistik",
-    "body_measurements": "Kroppsmått",
-    "weight_tracking": "Viktspårning",
-    "strength_progress": "Styrkeutveckling",
-    "cardio_progress": "Kondisutveckling",
-    "nutrition_trends": "Näringstrender",
-    "workout_frequency": "Träningsfrekvens",
-    "personal_records": "Personliga rekord",
-    "achievements": "Prestationer",
-    "goals": "Mål",
-    "this_week": "Denna vecka",
-    "this_month": "Denna månad",
-    "this_year": "Detta år",
-    "all_time": "All tid"
-  },
+
   "profile": {
     "title": "Profil",
     "refresh": "Uppdatera",
@@ -208,6 +263,7 @@
     "personal_information": "Personlig information",
     "first_name": "Förnamn",
     "last_name": "Efternamn",
+    "email": "E-post",
     "bio": "Biografi",
     "dob": "Födelsedatum",
     "gender": "Kön",
@@ -225,6 +281,9 @@
     "not_set": "Inte inställd",
     "account": "Konto",
     "sign_out": "Logga ut",
+    "sign_out_title": "Logga ut",
+    "sign_out_message": "Är du säker på att du vill logga ut?",
+    "sign_out_error": "Misslyckades med att logga ut",
     "daily_goals": "Dagliga mål",
     "daily_calories": "Dagliga kalorier",
     "water_intake": "Vattenintag",
@@ -261,127 +320,11 @@
     "progress_updates": "Framstegsuppdateringar",
     "remind_log_meals": "Få påminnelser om att logga dina måltider",
     "get_notified_workouts": "Få meddelanden om schemalagda träningspass",
-    "get_notified_achievements": "Få meddelanden om dina prestationer"
-  },
-  "settings": {
-    "language": "Språk",
-    "theme": "Tema",
-    "light": "Ljust",
-    "dark": "Mörkt",
-    "system": "System",
-    "notifications": "Aviseringar",
-    "privacy": "Integritet",
-    "terms": "Villkor",
-    "about": "Om",
-    "version": "Version",
-    "help": "Hjälp",
-    "support": "Support",
-    "feedback": "Feedback"
-  },
-  "ai_trainer": {
-    "title": "AI Tränare",
-    "chat": "Chatt",
-    "ask_anything": "Fråga mig vad som helst...",
-    "generate_workout": "Generera träningspass",
-    "generate_meal_plan": "Generera måltidsplan",
-    "get_advice": "Få råd",
-    "conversations": "Konversationer",
-    "new_conversation": "Ny konversation",
-    "delete_conversation": "Ta bort konversation",
-    "rename_conversation": "Byt namn på konversation",
-    "clear_history": "Rensa historik",
-    "rate_limit": "Begränsning",
-    "requests_remaining": "Förfrågningar kvar",
-    "upgrade_plan": "Uppgradera plan"
-  },
-  "dashboard": {
-    "welcome": "Välkommen tillbaka",
-    "todays_summary": "Dagens sammanfattning",
-    "quick_actions": "Snabbåtgärder",
-    "recent_activity": "Senaste aktivitet",
-    "upcoming_workouts": "Kommande träningspass",
-    "daily_progress": "Daglig framsteg",
-    "weekly_progress": "Veckovis framsteg",
-    "no_workouts_today": "Inga träningspass idag",
-    "no_meals_logged": "Inga måltider loggade",
-    "start_tracking": "Börja spåra"
-  },
-  "errors": {
-    "generic": "Något gick fel",
-    "network": "Nätverksfel",
-    "auth": "Autentiseringsfel",
-    "not_found": "Hittades inte",
-    "server_error": "Serverfel",
-    "try_again": "Försök igen",
-    "contact_support": "Kontakta support"
-  },
-  "profile": {
-    "title": "Profil",
-    "refresh": "Uppdatera",
-    "edit": "Redigera",
-    "cancel": "Avbryt",
-    "user": "Användare",
-    "personal_information": "Personlig information",
-    "first_name": "Förnamn",
-    "last_name": "Efternamn",
-    "bio": "Bio",
-    "dob": "Födelsedatum",
-    "gender": "Kön",
-    "male": "Man",
-    "female": "Kvinna",
-    "other": "Annat",
-    "physical_information": "Fysisk information",
-    "height_cm": "Längd (cm)",
-    "weight_kg": "Vikt (kg)",
-    "fitness_level": "Träningsnivå",
-    "beginner": "Nybörjare",
-    "intermediate": "Medel",
-    "advanced": "Avancerad",
-    "save_profile": "Spara profil",
-    "not_set": "Ej inställt",
-    "account": "Konto",
-    "sign_out": "Logga ut",
-    "daily_goals": "Dagliga mål",
-    "daily_calories": "Dagliga kalorier",
-    "water_intake": "Vattenintag",
+    "get_notified_achievements": "Få meddelanden om dina prestationer",
     "protein": "Protein",
     "carbs": "Kolhydrater",
     "fat": "Fett",
-    "kcal": "kcal",
-    "glasses": "glas",
-    "g": "g",
-    "save_daily_goals": "Spara dagliga mål",
-    "fitness_goals": "Träningsmål",
-    "add_goal": "+ Lägg till mål",
-    "add_fitness_goal": "Lägg till träningsmål",
-    "enter_fitness_goal": "Ange ditt träningsmål...",
-    "ai_trainer_settings": "AI Tränare Inställningar",
-    "enable_ai_trainer": "Aktivera AI Tränare",
-    "coaching_preferences": "Coachingpreferenser",
-    "coaching_style": "Coachingstil",
-    "communication_frequency": "Kommunikationsfrekvens",
-    "daily": "Dagligen",
-    "weekly": "Veckovis",
-    "on_demand": "På begäran",
-    "focus_areas": "Fokusområden",
-    "available_equipment": "Tillgänglig utrustning",
-    "workout_preferences": "Träningspreferenser",
-    "workout_duration_minutes": "Träningslängd (minuter)",
-    "workout_days_per_week": "Träningsdagar per vecka",
-    "nutrition_preferences": "Näringspreferenser",
-    "meal_preferences": "Måltidspreferenser",
-    "allergies": "Allergier",
-    "supplement_preferences": "Kosttillskottspreferenser",
-    "enter_allergy": "Ange allergi",
-    "enter_supplement": "Ange kosttillskott",
     "add": "Lägg till",
-    "notification_settings": "Notifikationsinställningar",
-    "workout_reminders": "Träningspåminnelser",
-    "nutrition_reminders": "Näringspåminnelser",
-    "progress_updates": "Framstegsuppdateringar",
-    "remind_log_meals": "Få påminnelser om att logga dina måltider",
-    "get_notified_workouts": "Få notiser om schemalagda träningspass",
-    "get_notified_achievements": "Få notiser om dina prestationer",
     "ai_trainer": {
       "description": "Få personliga tränings- och näringsråd från vår AI-tränare",
       "focus_areas": {
@@ -435,11 +378,20 @@
     "theme": {
       "title": "Tema",
       "subtitle": "Välj ditt föredragna tema",
-      "light": "Ljus",
-      "dark": "Mörk",
+      "light": "Ljust",
+      "dark": "Mörkt",
       "system": "System"
-    }
+    },
+    "notifications": "Aviseringar",
+    "privacy": "Integritet",
+    "terms": "Villkor",
+    "about": "Om",
+    "version": "Version",
+    "help": "Hjälp",
+    "support": "Support",
+    "feedback": "Feedback"
   },
+
   "dashboard": {
     "welcome": "Välkommen tillbaka",
     "subtitle": "Låt oss krossa dina fitnessmål idag!",
@@ -472,7 +424,18 @@
     "no_workouts_today": "Inga träningspass idag",
     "no_meals_logged": "Inga måltider loggade"
   },
+  "errors": {
+    "generic": "Något gick fel",
+    "network": "Nätverksfel",
+    "auth": "Autentiseringsfel",
+    "not_found": "Hittades inte",
+    "server_error": "Serverfel",
+    "try_again": "Försök igen",
+    "contact_support": "Kontakta support"
+  },
   "workouts_screen": {
+    "title": "Träning",
+    "subtitle": "Hantera dina träningspass, planer och övningar",
     "tabs": {
       "sessions": "Pass",
       "plans": "Planer",
@@ -576,6 +539,39 @@
       "great_job": "Du gör ett fantastiskt jobb!",
       "empty": "Inga analysdata än",
       "empty_hint": "Slutför några träningspass för att se din framgång!"
+    }
+  },
+  "analytics_screen": {
+    "title": "Analys",
+    "subtitle": "Spåra din träningsframgång"
+  },
+  "formatting": {
+    "date": {
+      "short": "yyyy-MM-dd",
+      "medium": "dd MMM yyyy",
+      "long": "dd MMMM yyyy",
+      "weekday_short": "EEE"
+    },
+    "time": {
+      "short": "HH:mm",
+      "medium": "HH:mm:ss",
+      "long": "HH:mm:ss z"
+    },
+    "datetime": {
+      "short": "yyyy-MM-dd HH:mm",
+      "medium": "dd MMM yyyy HH:mm",
+      "long": "dd MMMM yyyy 'kl.' HH:mm"
+    },
+    "relative_time": {
+      "just_now": "Just nu",
+      "minutes_ago": "{{count}} minut sedan",
+      "minutes_ago_plural": "{{count}} minuter sedan",
+      "hours_ago": "{{count}} timme sedan",
+      "hours_ago_plural": "{{count}} timmar sedan",
+      "days_ago": "{{count}} dag sedan",
+      "days_ago_plural": "{{count}} dagar sedan",
+      "weeks_ago": "{{count}} vecka sedan",
+      "weeks_ago_plural": "{{count}} veckor sedan"
     }
   }
 }
