--- a/GymCoachClean/src/i18n/locales/en.json
+++ b/GymCoachClean/src/i18n/locales/en.json
@@ -4,8 +4,46 @@
     "cancel": "Cancel",
     "back": "Back",
     "save": "Save",
+    "error": "Error",
+    "delete": "Delete",
     "loading": "Loading...",
-    "saving": "Saving..."
+    "saving": "Saving...",
+    "errors": {
+      "failed_to_start_quick_workout": "Failed to start quick workout. Please try again.",
+      "failed_to_delete_workout_plan": "Failed to delete workout plan",
+      "failed_to_load_session_data": "Failed to load session data",
+      "failed_to_start_workout_session": "Failed to start workout session",
+      "no_active_session_to_complete": "No active session to complete",
+      "failed_to_complete_session": "Failed to complete session",
+      "failed_to_load_conversation": "Failed to load conversation",
+      "title_too_long": "Title too long (max 100 characters)",
+      "failed_to_update_conversation_title": "Failed to update conversation title",
+      "failed_to_delete_conversation": "Failed to delete conversation",
+      "failed_to_update_profile": "Failed to update profile",
+      "failed_to_save_fitness_goal": "Failed to save fitness goal. Please try again.",
+      "failed_to_remove_fitness_goal": "Failed to remove fitness goal. Please try again.",
+      "failed_to_save_daily_goals": "Failed to save daily goals. Please try again.",
+      "failed_to_save_ai_preferences": "Failed to save AI preferences. Please try again.",
+      "failed_to_update_notification_settings": "Failed to update notification settings",
+      "failed_to_upload_profile_image": "Failed to upload profile image. Please try again.",
+      "please_enter_plan_name": "Please enter a plan name",
+      "please_enter_exercise_name": "Please enter an exercise name",
+      "please_enter_meal_name": "Please enter a meal name",
+      "please_enter_calories": "Please enter calories",
+      "failed_to_save_custom_meal": "Failed to save custom meal. Please try again.",
+      "failed_to_delete_meal": "Failed to delete meal. Please try again.",
+      "failed_to_update_water_intake": "Failed to update water intake",
+      "failed_to_load_meal_data": "Failed to load meal data.",
+      "failed_to_search_foods": "Failed to search foods. Please try again.",
+      "failed_to_load_progress_photos": "Failed to load progress photos",
+      "failed_to_upload_photo": "Failed to upload photo. Please try again.",
+      "failed_to_delete_photo": "Failed to delete photo",
+      "failed_to_update_photo": "Failed to update photo",
+      "failed_to_pick_image": "Failed to pick image. Please try again.",
+      "failed_to_upload_image": "Failed to upload image. Please try again.",
+      "workout_not_found": "Workout not found",
+      "failed_to_load_workout_details": "Failed to load workout details"
+    }
   },
   "nutrition": {
     "title": "Nutrition",
@@ -48,6 +86,8 @@
     "success": "Success",
     "meal_updated": "Meal updated successfully!",
     "meal_added": "Meal added successfully!",
+    "delete_meal_title": "Delete Meal",
+    "delete_meal_message": "Are you sure you want to delete this meal?",
     "coming_soon": "Coming soon...",
     "water_intake": "Water Intake",
     "glasses_today": "glasses today",
@@ -58,6 +98,13 @@
       "calculate_nutrition": "Could not calculate nutrition information.",
       "failed_to_add": "Failed to add meal. Please try again."
     }
+  },
+  "notifications": {
+    "hydration_goal_title": "💧 Hydration Goal Achieved!",
+    "hydration_goal_message": "Great job! You've reached your daily water intake goal.",
+    "nutrition_reminders_title": "Nutrition Reminders",
+    "nutrition_reminders_message": "Would you like to receive reminders to log your meals?",
+    "reminders_enabled": "Nutrition reminders have been enabled!"
   },
   "analytics": {
     "total_workouts": "Total Workouts",
@@ -96,7 +143,8 @@
     "ai_trainer": "AI Trainer",
     "nutrition": "Nutrition",
     "analytics": "Analytics",
-    "profile": "Profile"
+    "profile": "Profile",
+    "settings": "Settings"
   },
   "auth": {
     "app_name": "GymCoach AI",
@@ -158,6 +206,7 @@
     "personal_information": "Personal Information",
     "first_name": "First Name",
     "last_name": "Last Name",
+    "email": "Email",
     "bio": "Bio",
     "dob": "Date of Birth",
     "gender": "Gender",
@@ -175,6 +224,9 @@
     "not_set": "Not set",
     "account": "Account",
     "sign_out": "Sign Out",
+    "sign_out_title": "Sign Out",
+    "sign_out_message": "Are you sure you want to sign out?",
+    "sign_out_error": "Failed to sign out",
     "daily_goals": "Daily Goals",
     "daily_calories": "Daily Calories",
     "water_intake": "Water Intake",
@@ -307,6 +359,8 @@
     "no_meals_logged": "No meals logged"
   },
   "workouts_screen": {
+    "title": "Workouts",
+    "subtitle": "Manage your workouts, plans, and exercises",
     "tabs": {
       "sessions": "Sessions",
       "plans": "Plans",
@@ -410,6 +464,39 @@
       "great_job": "You're doing great!",
       "empty": "No analytics data yet",
       "empty_hint": "Complete some workouts to see your progress!"
+    }
+  },
+  "analytics_screen": {
+    "title": "Analytics",
+    "subtitle": "Track your fitness progress"
+  },
+  "formatting": {
+    "date": {
+      "short": "MM/dd/yyyy",
+      "medium": "MMM dd, yyyy",
+      "long": "MMMM dd, yyyy",
+      "weekday_short": "EEE"
+    },
+    "time": {
+      "short": "h:mm a",
+      "medium": "h:mm:ss a",
+      "long": "h:mm:ss a z"
+    },
+    "datetime": {
+      "short": "MM/dd/yyyy h:mm a",
+      "medium": "MMM dd, yyyy h:mm a",
+      "long": "MMMM dd, yyyy 'at' h:mm a"
+    },
+    "relative_time": {
+      "just_now": "Just now",
+      "minutes_ago": "{{count}} minute ago",
+      "minutes_ago_plural": "{{count}} minutes ago",
+      "hours_ago": "{{count}} hour ago",
+      "hours_ago_plural": "{{count}} hours ago",
+      "days_ago": "{{count}} day ago",
+      "days_ago_plural": "{{count}} days ago",
+      "weeks_ago": "{{count}} week ago",
+      "weeks_ago_plural": "{{count}} weeks ago"
     }
   }
 }
